--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "devDependencies": {
     "@swc-node/register": "^1.6.8",
     "@swc/core": "^1.3.101",
+    "@types/invariant": "^2.2.37",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@vercel/style-guide": "^5.1.0",
+    "esbuild": "^0.19.10",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.1",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
-  "prettier": "@vercel/style-guide/prettier"
+  "prettier": "@vercel/style-guide/prettier",
+  "dependencies": {
+    "invariant": "^2.2.4"
+  }
 }
