--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "strictNullChecks": true,
     "moduleResolution": "node",
     "types": ["node", "jest"],
-  }
+  },
+  "include": ["src/**/*.ts"]
 }
