--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "@swc-node/register": "^1.6.8",
     "@swc/core": "^1.3.101",
-    "@types/invariant": "^2.2.37",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@vercel/style-guide": "^5.1.0",
@@ -23,8 +22,5 @@
     "prettier": "^3.1.1",
     "typescript": "^5.3.3"
   },
-  "prettier": "@vercel/style-guide/prettier",
-  "dependencies": {
-    "invariant": "^2.2.4"
-  }
+  "prettier": "@vercel/style-guide/prettier"
 }
