--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "moduleResolution": "node",
     "types": ["node", "jest"],
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "demo/**/*.ts"]
 }
