--- a/package.json
+++ b/package.json
@@ -3,13 +3,30 @@
   "version": "0.1.0",
   "description": "Dependency graph helper based on esbuild's metafile",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/src/index.d.ts",
   "repository": "git@github.com:leegeunhyeok/esbuild-dependency-graph.git",
   "author": "leegeunhyeok <dev.ghlee@gmail.com>",
   "license": "MIT",
+  "files": [
+    "dist/*.js",
+    "dist/*.cjs",
+    "dist/*.mjs",
+    "dist/src/*.d.ts",
+    "README.md"
+  ],
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    }
+  },
   "scripts": {
-    "demo": "node -r @swc-node/register demo/index.ts",
+    "prepublishOnly": "yarn build",
     "test": "jest",
-    "build": "tsc src/index.ts --outdir dist"
+    "demo": "node -r @swc-node/register demo/index.ts",
+    "build": "node -r @swc-node/register build/index.ts && tsc",
+    "release": "release-it"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
@@ -25,6 +42,7 @@
     "eslint-plugin-prettier": "^5.1.1",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "release-it": "^17.0.1",
     "typescript": "^5.3.3"
   },
   "prettier": "@vercel/style-guide/prettier"
