--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "rootDir": ".",
-    "target": "ESNext",
+    "target": "es2020",
     "module": "commonjs",
-    "declaration": true,
+    "declarationDir": "dist",
     "removeComments": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
@@ -11,6 +11,9 @@
     "strictNullChecks": true,
     "moduleResolution": "node",
     "types": ["node", "jest"],
+    "outDir": "./dist",
+    "declaration": true,
+    "emitDeclarationOnly": true
   },
-  "include": ["src/**/*.ts", "demo/**/*.ts"]
+  "exclude": ["node_modules", "dist"]
 }
