--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es2020",
     "module": "commonjs",
     "declarationDir": "dist",
-    "removeComments": true,
+    "removeComments": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
