--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,14 @@
   "compilerOptions": {
     "rootDir": ".",
     "target": "es2020",
-    "module": "commonjs",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "declarationDir": "dist",
     "removeComments": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
-    "moduleResolution": "node",
     "types": ["node", "jest"],
     "outDir": "./dist",
     "declaration": true,
