--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@vercel/style-guide": "^5.1.0",
-    "esbuild": "^0.19.10",
+    "esbuild": "^0.24.0",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.1",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "release-it": "^17.0.1",
     "typescript": "^5.3.3"
+  },
+  "peerDependencies": {
+    "esbuild": "*"
   },
   "publishConfig": {
     "access": "public",
