--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esbuild-dependency-graph",
   "version": "0.4.4",
-  "description": "Dependency graph helper based on esbuild's metafile",
+  "description": "Generate a dependency graph using esbuild's metadata",
   "repository": "git@github.com:leegeunhyeok/esbuild-dependency-graph.git",
   "license": "MIT",
   "author": "leegeunhyeok <dev.ghlee@gmail.com>",
