test: migrate to vitest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "strictNullChecks": true,
     "strictBindCallApply": true,
     "stripInternal": true,
-    "types": ["node", "jest"]
+    "types": ["node"]
   },
   "exclude": ["node_modules", "dist"]
 }
