--- a/package.json
+++ b/package.json
@@ -28,25 +28,22 @@
     "demo": "node -r @swc-node/register demo/index.ts",
     "prepublishOnly": "rm -rf ./dist && yarn build",
     "release": "release-it",
-    "test": "jest"
+    "test": "vitest"
   },
   "prettier": "@vercel/style-guide/prettier",
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
-    "@jest/globals": "^29.7.0",
     "@swc-node/register": "^1.6.8",
     "@swc/core": "^1.3.101",
-    "@swc/jest": "^0.2.29",
-    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@vercel/style-guide": "^5.1.0",
     "esbuild": "^0.24.0",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.1",
-    "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "release-it": "^17.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^2.1.3"
   },
   "peerDependencies": {
     "esbuild": "*"
