--- a/package.json
+++ b/package.json
@@ -28,26 +28,27 @@
     "demo": "node -r @swc-node/register demo/index.ts",
     "prepublishOnly": "rm -rf ./dist && yarn build",
     "release": "release-it",
-    "test": "vitest"
+    "test": "vitest --run",
+    "test:watch": "vitest --watch"
   },
   "prettier": "@vercel/style-guide/prettier",
   "devDependencies": {
-    "@faker-js/faker": "^8.3.1",
     "@swc-node/register": "^1.10.9",
-    "@swc/core": "^1.7.39",
-    "@types/node": "^20.10.5",
-    "@vercel/style-guide": "^5.1.0",
+    "@swc/core": "^1.10.1",
+    "@types/node": "^22",
+    "@vercel/style-guide": "^6.0.0",
     "esbuild": "^0.24.0",
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "release-it": "^17.10.0",
-    "typescript": "^5.3.3",
-    "vitest": "^2.1.3"
+    "typescript": "5.7.2",
+    "vitest": "^2.1.8"
   },
   "peerDependencies": {
     "esbuild": "*"
   },
+  "packageManager": "yarn@4.5.3",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
