--- a/package.json
+++ b/package.json
@@ -24,22 +24,20 @@
     "README.md"
   ],
   "scripts": {
+    "lint": "oxlint",
+    "test": "vitest --run",
+    "test:watch": "vitest --watch",
     "build": "node -r @swc-node/register build/index.ts && tsc -p tsconfig.build.json",
     "demo": "node -r @swc-node/register demo/index.ts",
     "prepublishOnly": "rm -rf ./dist && yarn build",
-    "release": "release-it",
-    "test": "vitest --run",
-    "test:watch": "vitest --watch"
+    "release": "release-it"
   },
-  "prettier": "@vercel/style-guide/prettier",
   "devDependencies": {
     "@swc-node/register": "^1.10.9",
     "@swc/core": "^1.10.1",
     "@types/node": "^22",
-    "@vercel/style-guide": "^6.0.0",
     "esbuild": "^0.24.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "oxlint": "^0.15.2",
     "prettier": "^3.4.2",
     "release-it": "^17.10.0",
     "typescript": "5.7.2",
